# Ising-Model-Visual

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Doxyfile  IsingModel-Visual-C.c  IsingModel-Visual-C.sln  IsingModel-Visual-C.vcxproj  IsingModel-Visual-C.vcxproj.filters  IsingModel-Visual.c  IsingModel-Visual.cpp  IsingModel-Visual.h  IsingModel-Visual.ipynb  IsingModel-Visual.sln  IsingModel-Visual.vcxproj  IsingModel-Visual.vcxproj.filters  IsingModel.cpp  IsingModel.h  IsingModel.sln  IsingModel.vcxproj  IsingModel.vcxproj.filters  README.md  images2video.bat  ising_struct.h  map2torus.lyx  metropolis_hastings_neighbors.cpp  metropolis_hastings_step.cpp  metropolis_hastings_step.h  pbms2images.bat  test_algorithm.py
.ipynb_checkpoints/: README-checkpoint.md
docs/html/: _form0_tmp.ps  _formulas.dvi  _formulas.tex  _ising_8cpp.html  _ising_8h.html  _ising_8h_source.html  _ising___params_8cpp.html  _ising___params_8h.html  _ising___params_8h_source.html  _ising_model-_visual-_c_8c.html  _ising_model-_visual_8c.html  _ising_model-_visual_8cpp.html  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  class_ising-members.html  class_ising.html  class_ising___params-members.html  class_ising___params.html  classes.html  clean_8cpp.html  clean_8h.html  clean_8h_source.html  dir_0dffa9b74a780dcb43d57dc6fef54ff7.html  dir_196234b1d21dc44a6281ad3c5bc37abf.html  dir_29d9304f26f0017febb5c77f2cd025cf.html  dir_36f2056e25df12a302f1f790ccd2126e.html  dir_37bea1b8ab9a6f412cdb40514668f146.html  dir_39ae0efdac8668457047d38a89def2fe.html  dir_3feee31581be0c8e7f454d6103065ffc.html  dir_402b6e84fe6cedb1ff417b90070e3614.html  dir_406552daa56d8b7b38dbb032e79aef1a.html  dir_45383c372aaf507b8c6bd0f56438fe5c.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_635b5340e412ba3040539a941b16f7c9.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_6ead3d8fbe7f6b67b79bad16c3b028fa.html  dir_8045aa250ad63db016a3771663778e83.html  (+63 more)
docs/latex/: _ising_8cpp.tex  _ising_8h.tex  _ising___params_8cpp.tex  _ising___params_8h.tex  _ising_model-_visual-_c_8c.tex  _ising_model-_visual_8c.tex  _ising_model-_visual_8cpp.tex  annotated.tex  class_ising.tex  class_ising___params.tex  clean_8cpp.tex  clean_8h.tex  dir_3feee31581be0c8e7f454d6103065ffc.tex  dir_6ead3d8fbe7f6b67b79bad16c3b028fa.tex  dir_b79e2834a365cce913ac6f7d1d04d43d.tex  dir_b94e489d5b74c7369ad572d10fb9ee35.tex  files.tex  (+22 more)
include/: Ising.h  Ising_Params.h  Lattice.h  clean.h  file_management.h  hex_neighbors.h  ising_struct.h  lattice2pbm.h  lattice2png.h  metropolis_hastings_neighbors.h  metropolis_hastings_step.h  neighbors.h  pbm2png.h  pngs2video.h  random_generators.h  randomize_lattice.h  run_simulation.h  sqr_neighbors.h  wolff_neighbors.h  wolff_step.h
legacy/: IsingModelVisual.cpp
python/: IsingLattice.py  IsingModel.py  IsingModelClass.py  IsingModelPhysicsClass.py  IsingModelVisualClass.py  cpp_code.md  realIsingModel.py  results.csv
src/: Ising.cpp  IsingModel-Visual.cpp  Ising_Params.cpp  Lattice.cpp  Lattice.h  clean.cpp  file_management.cpp  hex_neighbors.cpp  lattice2pbm.cpp  lattice2png.cpp  metroplis_hastings_step.cpp  metropolis_hastings_neighbors.cpp  metropolis_hastings_step.cpp  neighbors.cpp  pbm2png.cpp  pngs2video.cpp  randomize_lattice.cpp  run_simulation.cpp  sqr_neighbors.cpp  wolff_neighbors.cpp  wolff_step.cpp
(+64 files in other folders)
